Make urbi-check more robust.
	* src/tests/Makefile.am (dispacher): Prefer C++ to C.
	* src/tests/bin/liburbi-check.as: Sleep longer between the
	execution of the server and that of the client.  If we go too
	soon, I get SEGVs.
	* src/tests/tests.hh, src/tests/tests.cc: Overhaul.
	Use cli.hh.
	Prefer options to positional arguments.

--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -95,20 +95,20 @@ nodist_tests_SOURCES = dispatcher.cc
 CLEANFILES += $(nodist_tests_SOURCES)
 
 dispatcher.cc: $(tests_SOURCES) Makefile
-	{								 \
-	  echo '#include "tests.hh"';					 \
-	  echo;								 \
-	  echo 'void';							 \
-	  echo 'dispatch(const char* method, urbi::UClient& client,';	 \
-	  echo '	 urbi::USyncClient& syncClient)';		 \
-	  echo '{';							 \
-	  for f in $(CHECKFILES); do					 \
-	    name=$$(echo $$f | sed -e 's@.*/@@;s@\..*@@');		 \
-	    echo "  TESTS_RUN($$name);";				 \
-	  done;								 \
-	  echo '  std::cerr << "Unknown test " << method << std::endl;'; \
-	  echo '  exit (1);';						 \
-	  echo '}';							 \
+	{								     \
+	  echo '#include "tests.hh"';					     \
+	  echo;								     \
+	  echo 'void';							     \
+	  echo 'dispatch(const std::string& method, urbi::UClient& client,'; \
+	  echo '	 urbi::USyncClient& syncClient)';		     \
+	  echo '{';							     \
+	  for f in $(CHECKFILES); do					     \
+	    name=$$(echo $$f | sed -e 's@.*/@@;s@\..*@@');		     \
+	    echo "  TESTS_RUN($$name);";				     \
+	  done;								     \
+	  echo '  std::cerr << "Unknown test " << method << std::endl;';     \
+	  echo '  exit(1);';						     \
+	  echo '}';							     \
 	} >dispatcher.cc.tmp
 	mv dispatcher.cc.tmp dispatcher.cc
 
