Let Libtool deal with details such as the shlibext.
	* sdk/param.mk.in: Do not remove the *.la file, it is needed to
	get help from libtool components.
	* src/tests/bin/urbi-launch.in: Pass "libuobject" instead of
	fighting to know whether it's "libuobject.dll", or
	"libuobject.so", or whatever.
	* src/urbi-launch.cc (xlt_dlopen): Rename as...
	(xlt_dlopenext): this.
	Adjust callers.
	Use lt_dlopenext instead of lt_dlopen.
	(usage): Adjust the usage: we don't want the extension of the
	modules.
	(add_module): Remove everything that deals with shlibext, let
	libtool DTRT.

--- a/sdk-remote/sdk/param.mk.in
+++ b/sdk-remote/sdk/param.mk.in
@@ -108,7 +108,7 @@ $(OUTSHLIB): $(LTOBJECTS) $(ARGUMENT_LIBS)
 	$(CXXLINK) -export-dynamic -o $(lalib) \
 	  $(LTOBJECTS) $(ARGUMENT_LIBS) $(LIBS) $(envdir)/libuobject.la -rpath $(hostdir)
 	cp $$(ls .libs/lib$(libbase)*$(SHLIBEXT) | head -n 1) $(OUTSHLIB)
-	rm -f $(lalib)
+#	rm -f $(lalib)
 
 # The command to generate the library.
 #
