--- a/sdk-remote/src/tests/bin/urbi-launch.in
+++ b/sdk-remote/src/tests/bin/urbi-launch.in
@@ -9,13 +9,9 @@ esac
 
 abs_top_srcdir='@abs_top_srcdir@'
 abs_top_builddir='@abs_top_builddir@'
-# Ask libtool for the name of the file to dlopen.  It saves us from
-# having to deal with the infamous SHLIBEXT.
-libuobject_dir=$abs_top_builddir/src/libuobject/.libs
-libuobject_la=$libuobject_dir/libuobject.la
-. $libuobject_la
 program=$abs_top_builddir/src/urbi-launch
-exec "$program" -c "$libuobject_dir/$dlname" "$@"
+uobject=$abs_top_builddir/src/libuobject/libuobject
+exec "$program" -c "$uobject" "$@"
 
 # Local Variables:
 # mode: shell-script
