Help umake-engine find the kernel's libuobject.
This solution is not satisfying, something else is needed so that we can
check SDK Remote without requiring a Kernel.  But it's currently good
enough.

	* src/tests/bin/wrapper.in: here.

--- a/sdk-remote/src/tests/bin/wrapper.in
+++ b/sdk-remote/src/tests/bin/wrapper.in
@@ -56,7 +56,8 @@ case $me in
      prefix="$abs_top_builddir"
      ;;
    (*)
-     envdir="$abs_top_builddir/src"
+     # Use the libuobject from the kernel.
+     envdir="$abs_top_builddir/../src"
      prefix="$abs_top_builddir"
      ;;
 esac
