Be sure that uobject-check is ready to use before using it.
	* src/tests/Makefile.am (%.log: %.uob): Depend on it.

--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -53,7 +53,7 @@ nodist_check_SCRIPTS += bin/uobject-check
 m4sh_scripts = bin/uobject-check
 
 
-%.log: %.uob
+%.log: %.uob bin/uobject-check
 	@$(am__check_pre) bin/uobject-check $(srcdir)/$* $(am__check_post)
 
 debug:
