--custom should not influence the connection mode.
	* src/urbi-launch.cc (connectMode): Rename as...
	(connect_mode): this.
	(--custom): No longer change the connect_mode.
	(usage): Adjust.
	* src/tests/bin/urbi-launch.in: When wrapping a --start, find the
	kernel's libuobject.

--- a/sdk-remote/src/tests/bin/urbi-launch.in
+++ b/sdk-remote/src/tests/bin/urbi-launch.in
@@ -10,8 +10,15 @@ esac
 abs_top_srcdir='@abs_top_srcdir@'
 abs_top_builddir='@abs_top_builddir@'
 program=$abs_top_builddir/src/urbi-launch
-uobject=$abs_top_builddir/src/libuobject/libuobject
-exec "$program" -c "$uobject" "$@"
+
+# The libubbject we load depends on the usage.
+echo >&2 "$0: $*"
+case " $* " in
+  (*' --start '*) libuobjectdir=$abs_top_builddir/../src;;
+  (*)             libuobjectdir=$abs_top_builddir/src/libuobject;;
+esac
+
+exec "$program" -c "$libuobjectdir/libuobject" "$@"
 
 # Local Variables:
 # mode: shell-script
