Move to libtool 2.2, with an embedded libltdl.
Libltdl is included in urbi-launch, it is no longer a dependency on the
runtime environment.

	* externals/libport: Update to get the newest init.mk.
	* configure.ac: Prefer the LT_ macros.
	Request for libltdl as a convenience lib.
	No longer use URBI_LTDL (but eventually the code we use in this
	configure.ac might migrate there).
	* Makefile.am: Include libltdl/Makefile.inc.
	* src/Makefile.am (urbi_launch_LDADD): Use the convenience library
	for libltdl.
	* src/libuco/local.mk, src/liburbi/local.mk, src/swig/Makefile.am,
	* include/local.mk: Adjust to newest init.mk.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -32,7 +32,7 @@ urbi_launch_SOURCES = urbi-launch.cc
 urbi_launch_CPPFLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS)
 urbi_launch_LDADD =				\
   $(AM_LDADD)					\
-  $(LTDL_LIBS)					\
+  $(top_builddir)/libltdl/libltdlc.la		\
   liburbi/liburbi.la
 urbi_launch_LDFLAGS =				\
   $(AM_LDFLAGS)
