Require Libtool 2.2.6 at bootstrap time.
	* bootstrap: Do that.
	* configure.ac: We might need to create '.deps/libltdl'.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -32,7 +32,7 @@ LT_PREREQ([2.2.6])
 LT_CONFIG_LTDL_DIR([libltdl])
 LT_INIT([pic-only shared disable-static dlopen win32-dll])
 # I don't know why I need this with Libtool 2.2.6
-# mkdir -p .deps/libltdl
+mkdir -p .deps/libltdl
 LTDL_INIT([nonrecursive])
 # Name the subdirectory that contains libltdl sources
 AC_SUBST([LIBTOOL_DEPS])
