--- a/sdk-remote/externals/bootstrap.cfg
+++ b/sdk-remote/externals/bootstrap.cfg
@@ -2,6 +2,7 @@ external: externals/libport -> libport
 link: build-aux          -> externals/libport/build-aux
 link: include/libport    -> externals/libport/include/libport
 link: lib/libport        -> externals/libport/lib/libport
+link: libltdl            -> externals/libport/libltdl
 link: jpeg-6b            -> externals/libjpeg-6b
 external: externals/libjpeg-6b -> jpeg-6b
 subpackage: externals/libjpeg-6b
