--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -29,6 +29,9 @@ include $(top_srcdir)/build-aux/revision.mk
 
 bin_PROGRAMS += urbi-launch
 urbi_launch_SOURCES = urbi-launch.cc
+# Find our own ltdl.h.  Push "system" headers last so that our headers
+# have priority.
+urbi_launch_CPPFLAGS = -I$(top_srcdir)/libltdl $(AM_CPPFLAGS)
 urbi_launch_LDADD =				\
   $(AM_LDADD)					\
   $(top_builddir)/libltdl/libltdlc.la		\
