Get rid of flags.mk.
flags.mk is not yet removed (this is one of the things Automake dislikes,
because it removes a file the Makefile depends upon).  In the near future,
it will be removed for real.

	* flags.mk: Inline it...
	* src/Makefile.am: here.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -1,4 +1,26 @@
-include $(top_srcdir)/flags.mk
+include $(top_srcdir)/build-aux/init.mk
+
+SUBDIRS = . tests
+if BINDINGS
+ SUBDIRS += swig
+endif
+
+# Find libport's sources and config.h.
+AM_CPPFLAGS += $(LIBPORT_CPPFLAGS)
+# Find libjpeg's source and build (jconfig.h) headers.
+AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir)/jpeg-6b
+# Find urbi/ headers.
+AM_CPPFLAGS += -I$(top_srcdir)/include
+# Find version.hh.
+AM_CPPFLAGS += -I$(top_builddir)/src
+# Find sdk/config.h
+AM_CPPFLAGS += -I$(top_builddir)
+
+AM_CXXFLAGS += $(PTHREAD_CFLAGS) $(SOCKETS_CFLAGS) $(WARNING_CXXFLAGS)
+
+LIBADD       =					\
+  $(PTHREAD_LIBS) $(SOCKETS_LIBS)		\
+  $(top_builddir)/lib/libport/libport.la
 AUTOMAKE_OPTIONS += subdir-objects
 
 AM_CPPFLAGS += $(BOOST_CPPFLAGS)
@@ -15,12 +37,6 @@ include libuco/local.mk
 include liburbi/local.mk
 include libuobject/local.mk
 include utils/local.mk
-
-SUBDIRS = . tests
-if BINDINGS
- SUBDIRS += swig
-endif
-
 ## ------------ ##
 ## version.hh.  ##
 ## ------------ ##
