s/USDK_APIR/URBI_SDK_API/g.
	* include/urbi/export.hh,
	* include/urbi/package-info.hh,
	* include/urbi/uabstractclient.hh,
	* include/urbi/ubinary.hh,
	* include/urbi/ucallbacks.hh.template,
	* include/urbi/uclient.hh,
	* include/urbi/uconversion.hh,
	* include/urbi/umain.hh,
	* include/urbi/umessage.hh,
	* include/urbi/uobject.hh,
	* include/urbi/ustarter.hh,
	* include/urbi/usyncclient.hh,
	* include/urbi/usystem.hh,
	* include/urbi/utable.hh,
	* include/urbi/utimer-callback.hh,
	* include/urbi/utimer-table.hh,
	* include/urbi/uvalue.hh,
	* include/urbi/uvar.hh,
	* src/libuco/utable.cc,
	* src/libuco/utimer-table.cc:
	Do it.

--- a/sdk-remote/include/urbi/ucallbacks.hh.template
+++ b/sdk-remote/include/urbi/ucallbacks.hh.template
@@ -34,7 +34,7 @@ namespace urbi
     the interface user point's of view.
   */
 
-  class USDK_API UGenericCallback
+  class URBI_SDK_API UGenericCallback
   {
   public:
     UGenericCallback(const std::string& objname,
