Add the first FAQ draft.
	* doc/FAQ.txt: New.
	* doc/RELEASE-NOTES.txt: Mention its existence.
	* scripts/package.in: Add it to the release.

--- a/scripts/package.in
+++ b/scripts/package.in
@@ -62,6 +62,7 @@ MANIFEST="$TMPDIR/MANIFEST.tmp.$$"
 $MV "$MANIFEST" "$packagedir/MANIFEST"
 
 # Copy the instructions at the top-level
+$CP "${srcdir}/doc/FAQ.txt" "$packagedir"
 $CP "${srcdir}/doc/RELEASE-NOTES.txt" "$packagedir"
 $CP "${srcdir}/doc/REPORTING-BUGS.txt" "$packagedir"
 $CP "${srcdir}/doc/QUICK-START.txt" "$packagedir"
