--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -51,7 +51,7 @@ BOOST_REQUIRE([1.35])
 # X11.
 # AC_PATH_XTRA will find us X11 headers even if we are cross-compiling for windows
 case $ac_cv_host in
-  (*pw32*|*win32*) no_x=yes;;
+  (*pw32*|*win32*|*mingw*) no_x=yes;;
   (*)  AC_PATH_XTRA ;;
 esac
 
