--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -1,8 +1,11 @@
 include $(top_srcdir)/build-aux/init.mk
 AUTOMAKE_OPTIONS += subdir-objects
+TESTS =
 include $(top_srcdir)/build-aux/check.mk
 include $(top_srcdir)/build-aux/m4sh.mk
 include examples/local.mk
+include uobjects/local.mk
+include checkfiles/local.mk
 
 ## ---------------------------------------- ##
 ## Wrappers for non-installed executables.  ##
@@ -26,50 +29,6 @@ nodist_noinst_SCRIPTS += $(configured_scripts)
 $(configured_scripts): bin/%: $(wildcard $(srcdir)/bin/*.in)
 	cd $(top_builddir) && $(SHELL) ./config.status src/tests/$@
 
-
-
-## -------------------- ##
-## uobject test suite.  ##
-## -------------------- ##
-
-# Compile each UObject using umake.
-
-# I couldn't get git-ls-files to list directories.  So ask for the CC
-# files in them, and keep only the *.uob part.
-UOBJECTS = $(patsubst %/,%,$(sort $(dir $(call ls_files,uobjects/*.uob/*.cc))))
-
-# uobject-check
-EXTRA_DIST += bin/uobject-check.as
-nodist_check_SCRIPTS += bin/uobject-check
-m4sh_scripts += bin/uobject-check
-
-
-%.log: %.uob bin/uobject-check
-	@$(am__check_pre) bin/uobject-check $(srcdir)/$* $(am__check_post)
-
-debug:
-	echo $(UOBJECTS)
-	echo $(TEST_LOGS)
-
-## -------------------------- ##
-## liburbi-check test suite.  ##
-## -------------------------- ##
-
-# From a test file to a log file.
-# Do not use a regular `.test.log:' rule here, since in that case the
-# following rule (without incoming extension) will mask this one.
-%.log: %.cc $(check_programs)
-	@$(am__check_pre) bin/liburbi-check $(srcdir)/$* $(am__check_post)
-
-# Find libport's sources and config.h.
-AM_CPPFLAGS += $(LIBPORT_CPPFLAGS)
-AM_CPPFLAGS += $(BOOST_CPPFLAGS)
-
-AM_LDADD =					\
-  $(top_builddir)/src/liburbi/liburbi.la	\
-  $(top_builddir)/jpeg-6b/libjpeg.la		\
-  $(PTHREAD_LIBS)
-
 # By default, instrument the code.
 INSTRUMENT = true
 URBI_SERVER = urbi-console
@@ -81,42 +40,7 @@ TESTS_ENVIRONMENT +=				\
   URBI_SERVER=$(URBI_SERVER)			\
   PATH=$(abs_builddir)/bin:$(abs_top_builddir)/src/examples:$$PATH
 
-# tests(*).
-check_PROGRAMS = bin/tests
 
-bin_tests_SOURCES = bin/tests.hh bin/tests.cc $(CHECKFILES)
-bin_tests_CPPFLAGS = $(AM_CPPFLAGS) -I$(srcdir)
-bin_tests_CXXFLAGS = $(AM_CXXFLAGS) -Wno-unused-parameter
-nodist_bin_tests_SOURCES = bin/dispatcher.cc
-CLEANFILES += $(nodist_tests_SOURCES)
-
-bin/dispatcher.cc: $(tests_SOURCES) Makefile
-	{								     \
-	  echo '#include "bin/tests.hh"';				     \
-	  echo;								     \
-	  echo 'void';							     \
-	  echo 'dispatch(const std::string& method, urbi::UClient& client,'; \
-	  echo '	 urbi::USyncClient& syncClient)';		     \
-	  echo '{';							     \
-	  for f in $(CHECKFILES); do					     \
-	    name=$$(echo $$f | sed -e 's@.*/@@;s@\..*@@');		     \
-	    echo "  TESTS_RUN($$name);";				     \
-	  done;								     \
-	  echo '  std::cerr << "Unknown test " << method << std::endl;';     \
-	  echo '  exit(1);';						     \
-	  echo '}';							     \
-	} >$@.tmp
-	mv $@.tmp $@
-
-# liburbi-check
-EXTRA_DIST += bin/liburbi-check.as
-nodist_check_SCRIPTS += bin/liburbi-check
-m4sh_scripts += bin/liburbi-check
-
-# The test suite.
-CHECKFILES = 					\
-  checkfiles/values.cc				\
-  checkfiles/removecallbacks.cc
 TESTS += $(CHECKFILES) $(UOBJECTS)
 TEST_LOGS = $(addsuffix .log,$(basename $(TESTS)))
 
