Allow to tell the difference bw a broken and a missing kernel install.
	* src/urbi-launch.cc (xlt_dladvise): New.
	(xlt_dlopenext): Use it.
	Accept a third arg for the exit status on error.
	Use a different one for libuobject and the user modules.
	This will allow to know whether the core libuobject is missing.
	* src/tests/bin/urbi-launch.in: Use this information to exit SKIP
	is we don't have the kernel's libuobject.

--- a/sdk-remote/src/tests/bin/urbi-launch.in
+++ b/sdk-remote/src/tests/bin/urbi-launch.in
@@ -22,6 +22,12 @@ case " $* " in
      # right place.
      if test -f $abs_top_builddir/../src/Makefile; then
        libuobjectdir=$abs_top_builddir/../src
+     else
+       # If we can't find the installed libuobject, skip the test.
+       $program ||
+         case $? in
+           (72) exit 77;;
+         esac
      fi;;
   (*)
      libuobjectdir=$abs_top_builddir/src/libuobject;;
